# global-manager

./: README.md  global-manager.todo.md  pyproject.toml
.github/workflows/: python-package.yml
src/global_manager/: __init__.py  global_manager_itself.py
tests/: pytest__global_manager_itself.py  pytest__init.py
